// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDialog Basic 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="SelectDialog-dialog"
    data-component-name="SelectDialog"
    ui5-dialog=""
  >
    <ui5-bar
      design="Footer"
      slot="footer"
      ui5-bar=""
    >
      <ui5-button
        design="Transparent"
        slot="endContent"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow SelectDialog-spread"
      design="Header"
      slot="header"
      ui5-bar=""
    >
      <ui5-title
        level="H2"
        slot="startContent"
        ui5-title=""
      />
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow"
      data-component-name="SelectDialogSubHeader"
      design="Subheader"
      slot="header"
      ui5-bar=""
    >
      <ui5-input
        class="SelectDialog-spread"
        placeholder="Search"
        slot="middleContent"
        type="Text"
        ui5-input=""
        value=""
        value-state="None"
      >
        <ui5-icon
          accessible-name="Search"
          class="SelectDialog-inputIcon"
          name="search"
          slot="icon"
          title="Search"
          ui5-icon=""
        />
      </ui5-input>
    </ui5-bar>
    <ui5-list
      accessible-role="list"
      growing="None"
      mode="SingleSelect"
      separators="All"
      ui5-list=""
    />
  </ui5-dialog>
</DocumentFragment>
`;

exports[`SelectDialog MultiSelect 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="SelectDialog-dialog-0-2-1"
    data-component-name="SelectDialog"
    on-desktop=""
    opened=""
    style="z-index: 106; display: flex; top: 384px; left: 512px;"
    ui5-dialog=""
  >
    <ui5-bar
      design="Footer"
      slot="footer"
      ui5-bar=""
    >
      <ui5-button
        design="Transparent"
        slot="endContent"
        ui5-button=""
      >
        Cancel
      </ui5-button>
      <ui5-button
        design="Emphasized"
        slot="endContent"
        ui5-button=""
      >
        Select
      </ui5-button>
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow-0-2-3 SelectDialog-spread-0-2-2"
      design="Header"
      slot="header"
      ui5-bar=""
    >
      <ui5-button
        design="Transparent"
        slot="endContent"
        ui5-button=""
      >
        Clear
      </ui5-button>
      <ui5-title
        level="H2"
        slot="startContent"
        ui5-title=""
      />
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow-0-2-3"
      data-component-name="SelectDialogSubHeader"
      design="Subheader"
      slot="header"
      ui5-bar=""
    >
      <ui5-input
        accessible-name="Search"
        class="SelectDialog-spread-0-2-2"
        placeholder="Search"
        type="Text"
        ui5-input=""
        value=""
        value-state="None"
      >
        <ui5-icon
          accessible-name="Search"
          class="SelectDialog-inputIcon-0-2-4"
          name="search"
          slot="icon"
          title="Search"
          ui5-icon=""
        />
      </ui5-input>
    </ui5-bar>
    <ui5-list
      accessible-role="list"
      busy-delay="1000"
      growing="None"
      mode="MultiSelect"
      separators="All"
      ui5-list=""
    >
      <div
        class="Toolbar-outerContainer-0-2-6 Toolbar-info-0-2-10 SelectDialog-infoBar-0-2-5"
        slot="header"
      >
        <div
          class="Toolbar-toolbar-0-2-13"
          data-component-name="ToolbarContent"
        >
          <div
            class="Toolbar-childContainer-0-2-16"
            data-component-name="ToolbarChildContainer"
          >
            <span
              class="Text-text-0-2-17"
            >
              Selected: 2
            </span>
          </div>
        </div>
      </div>
      <ui5-li
        _mode="MultiSelect"
        actionable=""
        additional-text-state="None"
        data-li="0"
        description="description0"
        has-border=""
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product0
      </ui5-li>
      <ui5-li
        _mode="MultiSelect"
        actionable=""
        additional-text-state="None"
        data-li="1"
        description="description1"
        has-border=""
        has-title=""
        selected=""
        type="Active"
        ui5-li=""
      >
        Product1
      </ui5-li>
      <ui5-li
        _mode="MultiSelect"
        actionable=""
        additional-text-state="None"
        data-li="2"
        description="description2"
        has-border=""
        has-title=""
        selected=""
        type="Active"
        ui5-li=""
      >
        Product2
      </ui5-li>
      <ui5-li
        _mode="MultiSelect"
        actionable=""
        additional-text-state="None"
        data-li="3"
        description="description3"
        has-border=""
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product3
      </ui5-li>
      <ui5-li
        _mode="MultiSelect"
        actionable=""
        additional-text-state="None"
        data-li="4"
        description="description4"
        has-border=""
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product4
      </ui5-li>
    </ui5-list>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`SelectDialog confirmButtonText 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="SelectDialog-dialog"
    data-component-name="SelectDialog"
    ui5-dialog=""
  >
    <ui5-bar
      design="Footer"
      slot="footer"
      ui5-bar=""
    >
      <ui5-button
        design="Transparent"
        slot="endContent"
        ui5-button=""
      >
        Cancel
      </ui5-button>
      <ui5-button
        design="Emphasized"
        slot="endContent"
        ui5-button=""
      >
        Exterminate
      </ui5-button>
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow SelectDialog-spread"
      design="Header"
      slot="header"
      ui5-bar=""
    >
      <ui5-title
        level="H2"
        slot="startContent"
        ui5-title=""
      />
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow"
      data-component-name="SelectDialogSubHeader"
      design="Subheader"
      slot="header"
      ui5-bar=""
    >
      <ui5-input
        class="SelectDialog-spread"
        placeholder="Search"
        slot="middleContent"
        type="Text"
        ui5-input=""
        value=""
        value-state="None"
      >
        <ui5-icon
          accessible-name="Search"
          class="SelectDialog-inputIcon"
          name="search"
          slot="icon"
          title="Search"
          ui5-icon=""
        />
      </ui5-input>
    </ui5-bar>
    <ui5-list
      accessible-role="list"
      growing="None"
      mode="MultiSelect"
      separators="All"
      ui5-list=""
    />
  </ui5-dialog>
</DocumentFragment>
`;

exports[`SelectDialog with children 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="SelectDialog-dialog"
    data-component-name="SelectDialog"
    ui5-dialog=""
  >
    <ui5-bar
      design="Footer"
      slot="footer"
      ui5-bar=""
    >
      <ui5-button
        design="Transparent"
        slot="endContent"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow SelectDialog-spread"
      design="Header"
      slot="header"
      ui5-bar=""
    >
      <ui5-title
        level="H2"
        slot="startContent"
        ui5-title=""
      />
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow"
      data-component-name="SelectDialogSubHeader"
      design="Subheader"
      slot="header"
      ui5-bar=""
    >
      <ui5-input
        class="SelectDialog-spread"
        placeholder="Search"
        slot="middleContent"
        type="Text"
        ui5-input=""
        value=""
        value-state="None"
      >
        <ui5-icon
          accessible-name="Search"
          class="SelectDialog-inputIcon"
          name="search"
          slot="icon"
          title="Search"
          ui5-icon=""
        />
      </ui5-input>
    </ui5-bar>
    <ui5-list
      accessible-role="list"
      growing="None"
      mode="SingleSelect"
      separators="All"
      ui5-list=""
    >
      <ui5-li
        actionable=""
        data-li="0"
        description="description0"
        has-title=""
        info-state="None"
        type="Active"
        ui5-li=""
      >
        Product0
      </ui5-li>
      <ui5-li
        actionable=""
        data-li="1"
        description="description1"
        has-title=""
        info-state="None"
        type="Active"
        ui5-li=""
      >
        Product1
      </ui5-li>
      <ui5-li
        actionable=""
        data-li="2"
        description="description2"
        has-title=""
        info-state="None"
        type="Active"
        ui5-li=""
      >
        Product2
      </ui5-li>
      <ui5-li
        actionable=""
        data-li="3"
        description="description3"
        has-title=""
        info-state="None"
        type="Active"
        ui5-li=""
      >
        Product3
      </ui5-li>
      <ui5-li
        actionable=""
        data-li="4"
        description="description4"
        has-title=""
        info-state="None"
        type="Active"
        ui5-li=""
      >
        Product4
      </ui5-li>
    </ui5-list>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`SelectDialog with headerText 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="SelectDialog-dialog"
    data-component-name="SelectDialog"
    ui5-dialog=""
  >
    <ui5-bar
      design="Footer"
      slot="footer"
      ui5-bar=""
    >
      <ui5-button
        design="Transparent"
        slot="endContent"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow SelectDialog-spread"
      design="Header"
      slot="header"
      ui5-bar=""
    >
      <ui5-title
        level="H2"
        slot="startContent"
        ui5-title=""
      >
        Select Dialog
      </ui5-title>
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow"
      data-component-name="SelectDialogSubHeader"
      design="Subheader"
      slot="header"
      ui5-bar=""
    >
      <ui5-input
        class="SelectDialog-spread"
        placeholder="Search"
        slot="middleContent"
        type="Text"
        ui5-input=""
        value=""
        value-state="None"
      >
        <ui5-icon
          accessible-name="Search"
          class="SelectDialog-inputIcon"
          name="search"
          slot="icon"
          title="Search"
          ui5-icon=""
        />
      </ui5-input>
    </ui5-bar>
    <ui5-list
      accessible-role="list"
      growing="None"
      mode="SingleSelect"
      separators="All"
      ui5-list=""
    >
      <ui5-li
        actionable=""
        data-li="0"
        description="description0"
        has-title=""
        info-state="None"
        type="Active"
        ui5-li=""
      >
        Product0
      </ui5-li>
      <ui5-li
        actionable=""
        data-li="1"
        description="description1"
        has-title=""
        info-state="None"
        type="Active"
        ui5-li=""
      >
        Product1
      </ui5-li>
      <ui5-li
        actionable=""
        data-li="2"
        description="description2"
        has-title=""
        info-state="None"
        type="Active"
        ui5-li=""
      >
        Product2
      </ui5-li>
      <ui5-li
        actionable=""
        data-li="3"
        description="description3"
        has-title=""
        info-state="None"
        type="Active"
        ui5-li=""
      >
        Product3
      </ui5-li>
      <ui5-li
        actionable=""
        data-li="4"
        description="description4"
        has-title=""
        info-state="None"
        type="Active"
        ui5-li=""
      >
        Product4
      </ui5-li>
    </ui5-list>
  </ui5-dialog>
</DocumentFragment>
`;
